--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "simple-line-icons": "^2.4.1",
     "ts-helpers": "^1.1.2",
     "tslib": "^1.11.1",
+    "uuid": "^8.0.0",
     "web-animations-js": "^2.3.2",
     "zone.js": "~0.10.3"
   },
