--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "mutationobserver-shim": "^0.3.5",
     "ng2-charts": "^2.3.0",
     "ngx-bootstrap": "^5.6.1",
+    "ngx-pagination": "^5.0.0",
     "ngx-perfect-scrollbar": "^9.0.0",
     "rxjs": "^6.5.5",
     "simple-line-icons": "^2.4.1",
